# car-goal

./: .gitignore  README.md
src/robot_description/: package.xml  setup.py
src/robot_description/robot_description/: car.sdf  goal.sdf  thingy.sdf  world.sdf
src/simulation/: package.xml  setup.py
src/simulation/launch/: simulation.launch.py  test_model.launch.py
src/simulation/resource/: ackermann.sdf
src/simulation/simulation/: Actor.py  Critic.py  environment.py  test_model.py  training.py
