<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>Package interacts with and listens to gazebo simulation</description>
  <maintainer email="cares@auckland.ac.nz">retinfai</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>robot_description</depend>
  <depend>ros_gz_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
